# iot-smart-glasses

./: .gitignore  AudioVisualRecording.py  DetectCMU.py  DetectCamera.py  EasyOCR.py  EasyOCRPi.py  IMG_0088.MOV  IMG_0091.MOV  ObjectDetection.py  PIOCR.py  PIOCR2.py  README.md  README.txt  RealtimeOCR.py  TextToSpeech.py  main.py  package-lock.json  package.json  pyproject.toml  requirement.tx  requirements.txt  text
app/: config.py  junks.py  main.py  test.py
app/ai/: __init__.py  image_to_detection.py  image_to_text.py  junks.py
app/routes/: routes.py
app/services/: services.py
app/sockets/: events.py  sockets.py
app/utils/: api_client.py  camera.py  sound.py
src/: App.tsx  AppRoute.tsx  routes.tsx
src/components/Main/: Main.scss  index.tsx
src/components/Main/Detections/: index.tsx
src/components/ui/layout/: Layout.scss  index.tsx
src/components/ui/layout/Footer/: index.tsx
src/components/ui/layout/Header/: index.tsx
src/enums/: index.tsx
src/pages/Auth/Login/: Login.tsx
src/pages/Auth/Register/: Register.tsx
src/socket/: SocketContext.tsx
src/utils/api/: API.tsx  index.tsx
